# tds-project-1-virtual-ta

./: README.md  app.py  embedding.py  preprocess_discourse.py  project-tds-virtual-ta-promptfoo.yaml  pyproject.toml
chroma_db/: chroma.sqlite3
markdown_discourse/: 161071_which-subject-to-choose-in-jan-term.md  161072_can-i-take-the-end-term-exam-without-submitting-assignments-if-i-missed-it-due-to-an-emergency.md  161083_ga1-development-tools-discussion-thread-tds-jan-2025.md  161120_ga2-deployment-tools-discussion-thread-tds-jan-2025.md  161214_contribute-to-my-open-source-llm-classroom-assignment-evaluator.md  162425_tds-calendar-link-not-found.md  163144_way-of-conduction-of-exam.md  163147_tds-iitm-certified-books.md  163158_tds-jan-2025-calender-accesss-and-video-lecture-access-in-portal.md  163224_answers-are-not-getting-saved.md  163241_regarding-extra-material-information-resources-for-the-upcoming-project.md  163247_ga3-large-language-models-discussion-thread-tds-jan-2025.md  163381_need-friends.md  163765_score-keeps-resetting-to-0.md  164089_ta-sessions-youtube-links.md  164147_issues-in-tds-and-replacement-with-another-course.md  164205_need-clarity.md  164214_tds-project-1-release-information-required.md  164277_project-1-llm-based-automation-agent-discussion-thread-tds-jan-2025.md  164291_regarding-droping-from-tds.md  164460_agenda-for-todays-21-01-2025-session.md  164462_tds-assignment-week-2.md  164737_drop-course-window-for-tds.md  164869_agenda-for-todays-live-session-flask-tutorial.md  165142_ga2-deadline.md  165433_questions-closed-ga.md  (+92 more)
(+2 files in other folders)
